# cque_rm_vision_src

./: 1.cpp  README.MD  README.md  ROS2下的OpenVINO配置指南.md
rm_armor_position/: README.md  package.xml  setup.cfg  setup.py
rm_armor_position/rm_armor_position/: rm_armor_position_node.py
rm_auto_aim/armor_detector/: CMakeLists.txt
rm_auto_aim/armor_detector/include/armor_detector/: common.hpp  detector.hpp  detector_node.hpp
rm_auto_aim/armor_detector/model/: 03.16_yolov8n_e50.xml  03.16_yolov8n_e50_half.xml  03.16_yolov8n_e50_int8.xml  03.19_yolov5n_e10.xml  07.19_yolov8n_e50_int8.xml
rm_auto_aim/armor_detector/src/: detector.cpp  detector_node.cpp  number_classifier.cpp
rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
rm_pyserial/: README.md  package.xml  setup.cfg  setup.py
rm_pyserial/rm_pyserial/: pyserial_node.py
rm_serial_driver/include/rm_serial_driver/: packet.hpp  rm_serial_driver.hpp
rm_serial_driver/src/: crc.cpp  rm_serial_driver.cpp
rm_socket_com/: README.md  package.xml  setup.cfg  setup.py
rm_socket_com/rm_socket_com/: socket_com.py
rm_vision/rm_vision_bringup/config/: camera_info.yaml  node_params.yaml
rm_vision/rm_vision_bringup/launch/: vision_bringup.launch.py
ros2-hik-camera/src/: hik_camera_node.cpp
