<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_pyserial</name>
  <version>0.0.1</version>
  <description>使用pyserial控制串口的功能包</description>
  <maintainer email="ev3rm0re@163.com">ev3rm0re</maintainer>
  <license>GPLv3</license>

  <depend>rclpy</depend>
  <depend>serial</depend>
  <depend>struct</depend>
  <depend>numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
